--- a/spring-boot-jsp/src/main/webapp/WEB-INF/css/styles.css
+++ b/spring-boot-jsp/src/main/webapp/WEB-INF/css/styles.css
@@ -6,10 +6,81 @@ body {
 	
 }
 
-.for_h2 h2 {
+
+/* Large screens ----------- */
+@media only screen  and (min-width : 1824px) {
+
+	.for_h2 h2 {
 	
-	font-size: 72px;
-	font-weght: bold;
-	color: red;
+		font-size: 52px;
+		font-weght: bold;
+		color: red;
+	
+	}
+
+	.all_img img {
+	
+		width: 810px;
+    	height: 394px;
+	
+	}
+
+}
+
+
+/* Desktops and laptops ----------- */
+@media only screen  and (min-width : 1224px) {
+	
+	
 	
 }
+
+
+
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+/* Styles */
+
+
+}
+
+
+
+
+    /* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+/* Styles */
+
+
+
+
+}
+
+
+
+
+
+/* IE8 */
+@media \0screen\,screen\9 {
+	
+
+	
+	
+	
+	
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
