change images and front-end for carousel

--- a/spring-boot-jsp/src/main/webapp/WEB-INF/css/styles.css
+++ b/spring-boot-jsp/src/main/webapp/WEB-INF/css/styles.css
@@ -24,6 +24,21 @@ body {
     	height: 394px;
 	
 	}
+	
+	.carousel-inner {
+	
+		width: 810px;
+    	height: 394px;
+	
+	}
+	
+	
+	#myCarousel {
+	
+		width: 810px;
+    	height: 394px;
+		
+	}
 
 }
 
